--- a/playbooks/ibm-was-nd-fixes.yml
+++ b/playbooks/ibm-was-nd-fixes.yml
@@ -5,18 +5,12 @@
 # HTTP server that has installation Files
 #   was_fixes_repository_url: http://192.168.1.1/was/8.5.5
 #
-# For Version 8.5.5.11
-#  was_fixes_bin_file01:    "8.5.5-WS-WAS-FP011-part1.zip"
-#  was_fixes_bin_file01_sha256: "bd9b51bd6a8522da8a6a19fcb0cf0ccc9980b13f5da2a1bcd4db2242ae555a66"
-#  was_fixes_bin_file02:    "8.5.5-WS-WAS-FP011-part2.zip"
-#  was_fixes_bin_file02_sha256: "0ab936b38ebee485471ce9f6fdbf5c0a609f0ffa837247fb81db6935f5cc061c"
-#
-# For Version 8.5.5.8
-#  was_fixes_bin_file01:    "8.5.5-WS-WAS-FP0000008-part1.zip"
-#  was_fixes_bin_file01_sha256: "ffd63ca69e1496f416e483e7ba7089a2b94b5538255b7eb037b672084f4870dc"
-#  was_fixes_bin_file02:    "8.5.5-WS-WAS-FP0000008-part2.zip"
-#  was_fixes_bin_file02_sha256: "14469a107c33083b5885dfeef010fe5fcb4b0815eb4ab3dadc5c47bbad6c4871"
-#  __was_version:           "8.5.5008.20151112_0939"
+# vars:
+#       # you can use both sintaxes
+#    __was_files:
+#      - bf:                8.5.5-WS-WAS-FP011-part1.zip
+#        bfs:               bd9b51bd6a8522da8a6a19fcb0cf0ccc9980b13f5da2a1bcd4db2242ae555a66
+#      - { bf: 8.5.5-WS-WAS-FP011-part2.zip, bfs: 0ab936b38ebee485471ce9f6fdbf5c0a609f0ffa837247fb81db6935f5cc061c }
 ---
 - name:                     Install IBM WAS ND Fixes
   hosts:                    was-servers
@@ -30,12 +24,18 @@
     __now:                  "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
     __rsp_file:             "{{ __logs_dir }}/was_nd_fixes.rsp"
     __log_file:             "{{ __logs_dir }}/was_nd_fixes_install.{{ __now }}.log"
-    __tpl_file:             "ansible/playbooks/was_nd_fixes.rsp"
-    __bin_file01:           "{{ was_fixes_bin_file01 | default('8.5.5-WS-WAS-FP011-part1.zip') }}"
-    __bin_file01_sha256:    "{{ was_fixes_bin_file01_sha256 | default('bd9b51bd6a8522da8a6a19fcb0cf0ccc9980b13f5da2a1bcd4db2242ae555a66') }}"
-    __bin_file02:           "{{ was_fixes_bin_file02 | default('8.5.5-WS-WAS-FP011-part2.zip') }}"
-    __bin_file02_sha256:    "{{ was_fixes_bin_file02_sha256 | default('0ab936b38ebee485471ce9f6fdbf5c0a609f0ffa837247fb81db6935f5cc061c') }}"
-    __was_fixes_version:    "8.5.5008.20151112_0939"
+    __tpl_file:             "was_nd_fixes.rsp.j2"
+
+    __this_version:         "{{ was_version | default('8.5.5011.20161206_1434') }}"
+    __this_files:
+      - { bf: 8.5.5-WS-WAS-FP011-part1.zip, bfs: bd9b51bd6a8522da8a6a19fcb0cf0ccc9980b13f5da2a1bcd4db2242ae555a66 }
+      - { bf: 8.5.5-WS-WAS-FP011-part2.zip, bfs: 0ab936b38ebee485471ce9f6fdbf5c0a609f0ffa837247fb81db6935f5cc061c }
+    __version_check:        "Updated to com.ibm.websphere.ND.v85_{{ __this_version }}"
+
+    __was_version_fp9:      "8.5.5009.20160225_0435"
+    __was_files_fp9:
+      - { bf: 8.5.5-WS-WAS-FP0000009-part1.zip, bfs: bf0817f50472c7f1ad0c50863ff0e7a07fb73f69f09a60bfad798d2b3cc1e3ae }
+      - { bf: 8.5.5-WS-WAS-FP0000009-part2.zip, bfs: c5501a75da3ab78887fa0208f26d7d81517e39a0c7e184bf36d28fbc93acbe22 }
 
   tasks:
     - name:                 Install pre-requisites
@@ -46,58 +46,68 @@
         - wget
       when:                 (ansible_distribution == "RedHat") or (ansible_distribution == "CentOS")
 
-    - name:                 Check Variables
-      debug:
-        msg="was_repository_url={{ was_repository_url }} was_fixes_bin_file01={{ was_fixes_bin_file01 }} was_fixes_bin_file01_sha256={{ was_fixes_bin_file01_sha256 }}"
+    - name:                 Is Product already Installed?
+      command:              egrep {{ __this_version }} /var/ibm/InstallationManager/installed.xml
+      register:             version_already_installed
+      ignore_errors:        true
 
     - name:                 Create Binaries directory
       file:                 path={{ __tmp_dir }} state=directory mode=0755
+      when:                 version_already_installed.rc != 0
 
     - name:                 Create Logs directory
       file:                 path={{ __logs_dir }} state=directory mode=0755
+      when:                 version_already_installed.rc != 0
 
-    - name:                 Download {{ was_fixes_bin_file01 }}
+    - name:                 Use Fix Pack 9?
+      set_fact:
+        __this_files:       "{{ __was_files_fp9 }}"
+        __version_check:    "Updated to com.ibm.websphere.ND.v85_{{ __this_version }}"
+      when:                 ( __this_version == __was_version_fp9 )
+
+    - name:                 Download WAS Fixes
       get_url:
-        url:                "{{ was_repository_url }}/{{ was_fixes_bin_file01 }}"
-        dest:               "{{ __tmp_dir }}/{{ was_fixes_bin_file01 }}"
+        url:                "{{ was_repository_url }}/{{ item.bf }}"
+        dest:               "{{ __tmp_dir }}/{{ item.bf }}"
         mode:               0755
-        checksum:           sha256:{{ was_fixes_bin_file01_sha256 }}
+        checksum:           sha256:{{ item.bfs }}
+      with_items:           "{{ __this_files }}"
+      when:                 version_already_installed.rc != 0
 
-    - name:                 Download {{ was_fixes_bin_file02 }}
-      get_url:
-        url:                "{{ was_repository_url }}/{{ was_fixes_bin_file02 }}"
-        dest:               "{{ __tmp_dir }}/{{ was_fixes_bin_file02 }}"
-        mode:               0755
-        checksum:           sha256:{{ was_fixes_bin_file02_sha256 }}
-
-    - name:                 Extract {{ was_fixes_bin_file01 }}
+    - name:                 Extract WAS Fixes
       unarchive:
-        src:                "{{ __tmp_dir }}/{{ was_fixes_bin_file01 }}"
+        src:                "{{ __tmp_dir }}/{{ item.bf }}"
         dest:               "{{ __tmp_dir }}/"
         copy:               no
-
-    - name:                 Extract {{ was_fixes_bin_file02 }}
-      unarchive:
-        src:                "{{ __tmp_dir }}/{{ was_fixes_bin_file02 }}"
-        dest:               "{{ __tmp_dir }}/"
-        copy:               no
+      with_items:           "{{ __this_files }}"
+      when:                 version_already_installed.rc != 0
 
     - name:                 Generate WAS Response file
       template:
         src:                "{{ __tpl_file }}"
         dest:               "{{ __rsp_file }}"
+      when:                 version_already_installed.rc != 0
 
-    - name:                 Debugando
-      debug:                msg="{{ __iim_install_location }}/eclipse/tools/imcl -acceptLicense -sVP -log {{ __log_file }} input {{ __rsp_file }}"
+    - name:                 Disable Repository on Installation Manager
+      replace:
+        path:               /var/ibm/InstallationManager/.settings/com.ibm.cic.agent.core.prefs
+        regexp:             '(\s*)RepositoryIsOpen=true(\s*)'
+        replace:            '\1RepositoryIsOpen=false\2'
+        backup:             yes
+      ignore_errors:        true
 
     - name:                 Install IBM WAS ND Fixes Software
       command:
         chdir={{ __tmp_dir }}
         {{ __iim_install_location }}/eclipse/tools/imcl -acceptLicense -sVP -log {{ __log_file }} input {{ __rsp_file }}
-      register:             install
-      changed_when:         install.rc != 0
+      register:             cout
+      changed_when:        ( cout.stdout.find(__version_check) != -1)
+      when:                 version_already_installed.rc != 0
 
-    #- name:                Cleanup Binaries directory
-    #  file:
-    #    state:             absent
-    #    path:              "{{ __tmp_dir }}"
+    #- debug:                var=cout
+
+    - name:                 Cleanup Binaries directory
+      file:
+        state:              absent
+        path:               "{{ __tmp_dir }}"
+      when:                 version_already_installed.rc != 0
