--- a/playbooks/ibm-was-nd.yml
+++ b/playbooks/ibm-was-nd.yml
@@ -5,12 +5,12 @@
 # HTTP server that has installation Files
 #   was_repository_url:     http://192.168.1.1/was/8.5.5
 #
-# was_bin_file01:           "WAS_ND_V8.5.5_1_OF_3.zip"
-# was_bin_file01_sha256:    "b1333962ba4b25c8632c7e4c82b472350337e99febac8f70ffbd551ca3905e83"
-# was_bin_file02:           "WAS_ND_V8.5.5_2_OF_3.zip"
-# was_bin_file02_sha256:    "440b7ed82089d43b1d45c1e908bf0a1951fed98f2542b6d37c8b5e7274c6b1c9"
-# was_bin_file03:           "WAS_ND_V8.5.5_3_OF_3.zip"
-# was_bin_file03_sha256:    "b73ae070656bed6399a113c2db9fb0abaf5505b0d41c564bf2a58ce0b1e0dcd2"
+#    __was_files:
+#      - bf: WAS_ND_V8.5.5_1_OF_3.zip
+#        bfs: b1333962ba4b25c8632c7e4c82b472350337e99febac8f70ffbd551ca3905e83
+#      - { bf: WAS_ND_V8.5.5_2_OF_3.zip, bfs: 440b7ed82089d43b1d45c1e908bf0a1951fed98f2542b6d37c8b5e7274c6b1c9 }
+#      - { bf: WAS_ND_V8.5.5_3_OF_3.zip, bfs: b73ae070656bed6399a113c2db9fb0abaf5505b0d41c564bf2a58ce0b1e0dcd2 }
+#    __this_version:         "{{ was_version | default('8.5.5000.20130514_1044') }}"
 ---
 - name:                     Install IBM WebSphere Applicaton Server
   hosts:                    was-servers
@@ -24,13 +24,12 @@
     __now:                  "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
     __rsp_file:             "{{ __logs_dir }}/was_nd.rsp"
     __log_file:             "{{ __logs_dir }}/was_nd_install.{{ __now }}.log"
-    __tpl_file:             "ansible-ibm-websphere/playbooks/was_nd.rsp"
-    __bin_file01:           "{{ was_bin_file01 | default('WAS_ND_V8.5.5_1_OF_3.zip') }}"
-    __bin_file01_sha256:    "{{ was_bin_file01_sha256 | default('b1333962ba4b25c8632c7e4c82b472350337e99febac8f70ffbd551ca3905e83') }}"
-    __bin_file02:           "{{ was_bin_file02 | default('WAS_ND_V8.5.5_2_OF_3.zip') }}"
-    __bin_file02_sha256:    "{{ was_bin_file02_sha256 | default('440b7ed82089d43b1d45c1e908bf0a1951fed98f2542b6d37c8b5e7274c6b1c9') }}"
-    __bin_file03:           "{{ was_bin_file03 | default('WAS_ND_V8.5.5_3_OF_3.zip') }}"
-    __bin_file03_sha256:    "{{ was_bin_file03_sha256 | default('b73ae070656bed6399a113c2db9fb0abaf5505b0d41c564bf2a58ce0b1e0dcd2') }}"
+    __tpl_file:             "was_nd.rsp.j2"
+    __was_files:
+      - { bf: WAS_ND_V8.5.5_1_OF_3.zip, bfs: b1333962ba4b25c8632c7e4c82b472350337e99febac8f70ffbd551ca3905e83 }
+      - { bf: WAS_ND_V8.5.5_2_OF_3.zip, bfs: 440b7ed82089d43b1d45c1e908bf0a1951fed98f2542b6d37c8b5e7274c6b1c9 }
+      - { bf: WAS_ND_V8.5.5_3_OF_3.zip, bfs: b73ae070656bed6399a113c2db9fb0abaf5505b0d41c564bf2a58ce0b1e0dcd2 }
+    __this_version:         "{{ was_version | default('8.5.5000.20130514_1044') }}"
 
   tasks:
     - name:                 Install pre-requisites
@@ -41,83 +40,55 @@
         - wget
       when:                 (ansible_distribution == "RedHat") or (ansible_distribution == "CentOS")
 
-    - name:                 Check Variables
-      debug:
-        msg="was_repository_url={{ was_repository_url }} __bin_file01={{ __bin_file01 }} __bin_file01_sha256={{ __bin_file01_sha256 }}"
+    - name:                 Is Product already Installed?
+      command:              egrep {{ __this_version }} /var/ibm/InstallationManager/installed.xml
+      register:             version_already_installed
+      ignore_errors:        true
 
+    #-  debug:               var=version_already_installed
     - name:                 Create Binaries directory
       file:                 path={{ __tmp_dir }} state=directory mode=0755
+      when:                 version_already_installed.rc != 0
 
     - name:                 Create Logs directory
       file:                 path={{ __logs_dir }} state=directory mode=0755
+      when:                 version_already_installed.rc != 0
 
-    - name:                 Download {{ __bin_file01 }}
+    - name:                 Download WAS ND V8.5.5 Files
       get_url:
-        url:                "{{ was_repository_url }}/{{ __bin_file01 }}"
-        dest:               "{{ __tmp_dir }}/{{ __bin_file01 }}"
+        url:                "{{ was_repository_url }}/{{ item.bf }}"
+        dest:               "{{ __tmp_dir }}/{{ item.bf }}"
         mode:               0755
-        checksum:           sha256:{{ __bin_file01_sha256 }}
+        checksum:           sha256:{{ item.bfs }}
+      with_items:           "{{ __was_files }}"
+      when:                 version_already_installed.rc != 0
 
-    - name:                 Download {{ __bin_file02 }}
-      get_url:
-        url:                "{{ was_repository_url }}/{{ __bin_file02 }}"
-        dest:               "{{ __tmp_dir }}/{{ __bin_file02 }}"
-        mode:               0755
-        checksum:           sha256:{{ __bin_file02_sha256 }}
-
-    - name:                 Download {{ __bin_file03 }}
-      get_url:
-        url:                "{{ was_repository_url }}/{{ __bin_file03 }}"
-        dest:               "{{ __tmp_dir }}/{{ __bin_file03 }}"
-        mode:               0755
-        checksum:           sha256:{{ __bin_file03_sha256 }}
-
-    - name:                 Extract {{ __bin_file01 }}
+    - name:                 Extract WAS ND V8.5.5 Files
       unarchive:
-        src:                "{{ __tmp_dir }}/{{ __bin_file01 }}"
+        src:                "{{ __tmp_dir }}/{{ item.bf }}"
         dest:               "{{ __tmp_dir }}/"
         copy:               no
-
-    - name:                 Extract {{ __bin_file02 }}
-      unarchive:
-        src:                "{{ __tmp_dir }}/{{ __bin_file02 }}"
-        dest:               "{{ __tmp_dir }}/"
-        copy:               no
-
-    - name:                 Extract {{ __bin_file03 }}
-      unarchive:
-        src:                "{{ __tmp_dir }}/{{ __bin_file03 }}"
-        dest:               "{{ __tmp_dir }}/"
-        copy:               no
+      with_items:           "{{ __was_files }}"
+      when:                 version_already_installed.rc != 0
 
     - name:                 Generate WAS Response file
       template:
         src:                "{{ __tpl_file }}"
         dest:               "{{ __rsp_file }}"
+      when:                 version_already_installed.rc != 0
 
     - name:                 Install IBM WAS Software
       command:
         chdir={{ __tmp_dir }}
         {{ __iim_install_location }}/eclipse/tools/imcl -acceptLicense -sVP -log {{ __log_file }} input {{ __rsp_file }}
-        creates={{ __was_install_location }}
-      register:             install
-      changed_when:         install.rc != 0
+      register:             cout
+      changed_when:         ( cout.stdout.find('Installed com.ibm.websphere.ND.v85_8.5.5000') != -1)
+      when:                 version_already_installed.rc != 0
+
+    #- debug:                var=cout
 
     - name:                 Cleanup Binaries directory
       file:
         state:              absent
         path:               "{{ __tmp_dir }}"
-
-# installed.xml:            <package kind='offering' name='IBM® Installation Manager' id='com.ibm.cic.agent' version='1.8.6000.20161118_1611'>
-#<package kind='offering' name='IBM WebSphere Application Server Network Deployment' id='com.ibm.websphere.ND.v85' version='8.5.5000.20130514_1044'>
-    #PROD_ROOT=`egrep "location id" /var/ibm/InstallationManager/installed.xml | grep "$PROD_NAME" | sed "s,.*path='\([^']*\)'.*,\1,"`
-    #if [ "X$PROD_ROOT" = "X" ]; then
-    #   log_debug "is_product_installed : [$PROD_ROOT] no location"
-    #   return 1
-    #fi
-
-    #PROD_VERSION=`egrep "package kind='offering" /var/ibm/InstallationManager/installed.xml | grep "$PKG_ID" | sed "s,.*version='\([^']*\)'.*,\1,"`
-    #if [ "X$PROD_VERSION" = "X" ]; then
-    #   log_debug "is_product_installed : [$PROD_VERSION] no version"
-    #   return 1
-    #fi
+      when:                 version_already_installed.rc != 0
