--- a/playbooks/was-profile-cleanup-logs.yml
+++ b/playbooks/was-profile-cleanup-logs.yml
@@ -3,32 +3,34 @@
 # ansible-playbooks -i hosts.development -k ansible-ibm-websphere/playbooks/was-profile-cleanup-logs.yml
 #
 ---
-- name:           Cleanup and Truncate files on Log directory
-  hosts:          dmgr, was-nodes
-  become:         true
+- name:                      Cleanup and Truncate files on Log directory
+  hosts:                     dmgr, was-servers
+  become:                    true
   vars:
-    __profile_name: "{{ profile_name }}"  # | default('AppSrv01') }}"
+    __profile_name:          "{{ profile_name | default('AppSrv01') }}"
+    #__was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
+    __was_install_location:  "/opt/IBM/WebSphere/AppServer"
   tasks:
-    - name: "Collect Files: SystemErr_*.log, SystemOut_*.log, trace_*.log, startServer.log, *.txt"
+    - name: "Collect Files:  SystemErr_*.log, SystemOut_*.log, trace_*.log, startServer.log, *.txt"
       find:
-        paths:    /opt/IBM/WebSphere/AppServer/profiles/{{ __profile_name }}/logs
-        patterns: "SystemErr_*.log,SystemOut_*.log,trace_*.log,startServer.log,*.txt"
-        recurse:  yes
-      register:   files_to_delete
+        paths:               "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs"
+        patterns:            "SystemErr_*.log,SystemOut_*.log,trace_*.log,startServer.log,*.txt"
+        recurse:             yes
+      register:              files_to_delete
 
-    - name: "Delete Files: SystemErr_*.log, SystemOut_*.log, trace_*.log, startServer.log, *.txt"
+    - name: "Delete Files:   SystemErr_*.log, SystemOut_*.log, trace_*.log, startServer.log, *.txt"
       file:
-        path:     "{{ item.path }}" #correction code
-        state:    absent
-      with_items: "{{ files_to_delete.files }}"
+        path:                "{{ item.path }}" #correction code
+        state:               absent
+      with_items:            "{{ files_to_delete.files }}"
 
-    - name: "Collect Files: SystemOut.log,SystemErr.log,native_stdout.log,native_stderr.log,*_exception.log"
+    - name: "Collect Files:  SystemOut.log,SystemErr.log,native_stdout.log,native_stderr.log,*_exception.log"
       find:
-        paths:    /opt/IBM/WebSphere/AppServer/profiles/{{ __profile_name }}/logs
-        patterns: "SystemOut.log,SystemErr.log,native_stdout.log,native_stderr.log,*_exception.log"
-        recurse:  yes
-      register:   files_to_truncate
+        paths:               "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs"
+        patterns:            "SystemOut.log,SystemErr.log,native_stdout.log,native_stderr.log,*_exception.log"
+        recurse:             yes
+      register:              files_to_truncate
 
     - name: "Truncate Files: SystemOut.log,SystemErr.log,native_stdout.log,native_stderr.log,*_exception.log"
-      shell:      echo '' > "{{ item.path }}"
-      with_items: "{{ files_to_truncate.files }}"
+      shell:                 echo '' > "{{ item.path }}"
+      with_items:            "{{ files_to_truncate.files }}"
