--- a/playbooks/was-profile-cleanup-temps.yml
+++ b/playbooks/was-profile-cleanup-temps.yml
@@ -3,17 +3,19 @@
 # ansible-playbooks -i hosts.development -k ansible-ibm-websphere/playbooks/was-profile-cleanup-temps.yml
 #
 ---
-- name:           Cleanup and Truncate files on Log directory
-  hosts:          was-nodes
-  serial:         1  # run sequentially
-  become:         true
+- name:                      Cleanup and Truncate files on Log directory
+  hosts:                     dmgr, was-servers
+  serial:                    1  # run sequentially
+  become:                    true
   vars:
-    __profile_name: "{{ profile_name }}"
+    __profile_name:          "{{ profile_name | default('AppSrv01') }}"
+    #__was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
+    __was_install_location:  "/opt/IBM/WebSphere/AppServer"
   tasks:
-    - name: "Cleanup temp directories"
+    - name:                  "Cleanup temp directories"
       file:
-        path:    /opt/IBM/WebSphere/AppServer/profiles/{{ __profile_name }}/{{ item }}
-        state:    absent
+        path:                "{{ __was_install_location }}/profiles/{{ __profile_name }}/{{ item }}"
+        state:               absent
       with_items:
         - temp
         - wstemp
