--- a/playbooks/ibm-installation-manager.yml
+++ b/playbooks/ibm-installation-manager.yml
@@ -11,7 +11,7 @@
 #
 ---
 - name:                     Install IBM Installation Manager
-  hosts:                    was-servers
+  hosts:                    dmgr,was-servers
   become:                   true
   vars:
     __tmp_dir:              "{{ tmp_dir | default('/opt/IBM/Binaries') }}/iim"
