--- a/playbooks/ibm-was-java.yml
+++ b/playbooks/ibm-was-java.yml
@@ -7,7 +7,7 @@
 #
 ---
 - name:                     Install IBM WAS Java SDK
-  hosts:                    was-servers
+  hosts:                    dmgr,was-servers
   become:                   true
   vars:
     __tmp_dir:              "{{ tmp_dir | default('/opt/IBM/Binaries') }}/was_fixes"
