--- a/playbooks/ibm-was-nd.yml
+++ b/playbooks/ibm-was-nd.yml
@@ -13,7 +13,7 @@
 #    __this_version:         "{{ was_version | default('8.5.5000.20130514_1044') }}"
 ---
 - name:                     Install IBM WebSphere Applicaton Server
-  hosts:                    was-servers
+  hosts:                    dmgr,was-servers
   become:                   true
   vars:
     __tmp_dir:              "{{ tmp_dir | default('/opt/IBM/Binaries') }}/was"
