--- a/playbooks/was-dmgr-start.yml
+++ b/playbooks/was-dmgr-start.yml
@@ -17,7 +17,7 @@
 
     - name:                 "Start Dmgr"
       command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/startManager.sh"
-      register:             start
-      changed_when:         start.rc == 0
+      register:             cout
+      changed_when:         cout.rc == 0
       #changed_when:        ( start.stdout.find('open for e-business') != -1)
       when:                 dmgr_is_running.rc != 0
