--- a/playbooks/was-dmgr-stop.yml
+++ b/playbooks/was-dmgr-stop.yml
@@ -10,14 +10,14 @@
     __profile_name:         "{{ profile_name | default('Dmgr01') }}"
     __was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
   tasks:
-    - name:                 Verify if pid file
+    - name:                 "Verify if pid file"
       shell:                "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/dmgr/dmgr.pid'`"
       register:             dmgr_is_running
       ignore_errors:        true
 
-    - name:                 Stop Dmgr
-      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopManager.sh  -username {{ was_user }} -password {{ was_password }}"
-      register:             start
-      changed_when:         start.rc == 0
+    - name:                 "Stop Dmgr"
+      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopManager.sh  -username {{ was_username }} -password {{ was_password }}"
+      register:             cout
+      changed_when:         cout.rc == 0
       #changed_when:        ( start.stdout.find('open for e-business') != -1)
       when:                 dmgr_is_running.rc == 0
