--- a/playbooks/was-nodeagent-start.yml
+++ b/playbooks/was-nodeagent-start.yml
@@ -10,14 +10,14 @@
     __profile_name:         "{{ profile_name | default('AppSrv01') }}"
     __was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
   tasks:
-    - name:                 Verify if pid file
+    - name:                 "Verify if pid file"
       shell:                ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid"`
       register:             nodeagent_is_running
       ignore_errors:        true
 
     - name:                 "Start Node Agent"
       command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/startNode.sh"
-      register:             start
-      changed_when:         start.rc == 0
+      register:             cout
+      changed_when:         cout.rc == 0
       #changed_when:        ( start.stdout.find('open for e-business') != -1)
       when:                 nodeagent_is_running.rc != 0
