--- a/playbooks/was-nodeagent-stop.yml
+++ b/playbooks/was-nodeagent-stop.yml
@@ -10,14 +10,14 @@
     __profile_name:         "{{ profile_name | default('AppSrv01') }}"
     __was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
   tasks:
-    - name:                 Verify if pid file
-      shell:                ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid"`
+    - name:                 "Verify if pid file"
+      shell:                "ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid"`
       register:             nodeagent_is_running
       ignore_errors:        true
 
     - name:                 "Stop Node Agent"
-      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopNode.sh  -username {{ was_user }} -password {{ was_password }}"
-      register:             start
-      changed_when:         start.rc == 0
+      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopNode.sh  -username {{ was_username }} -password {{ was_password }}"
+      register:             cout
+      changed_when:         cout.rc == 0
       #changed_when:        ( start.stdout.find('open for e-business') != -1)
       when:                 nodeagent_is_running.rc == 0
