--- a/playbooks/was-server-start.yml
+++ b/playbooks/was-server-start.yml
@@ -1,6 +1,6 @@
 # How to Run
 #
-# ansible-playbooks -i hosts.development -k ansible-ibm-websphere/playbooks/was-server-start.yml
+# ansible-playbook -i hosts.development -k ansible-ibm-websphere/playbooks/was-server-start.yml
 #
 ---
 - name:                     Start WAS Servers
@@ -19,8 +19,8 @@
 
     - name:                 "Start Node Agent"
       command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/startNode.sh"
-      register:             start
-      changed_when:         start.rc == 0
+      register:             cout
+      changed_when:         cout.rc == 0
       #changed_when:        ( start.stdout.find('open for e-business') != -1)
       when:                 nodeagent_is_running.rc != 0
 
@@ -33,7 +33,7 @@
     #- debug: var=server_is_running
     - name:                 "Start Servers"
       command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/startServer.sh {{ item.item }}"
-      register:             start
-      changed_when:         start.rc == 0
+      register:             cout
+      changed_when:         cout.rc == 0
       when:                 item.rc != 0
       with_items:           "{{ server_is_running.results }}"
