--- a/playbooks/was-server-stop.yml
+++ b/playbooks/was-server-stop.yml
@@ -12,7 +12,7 @@
     __was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
     __servers:              "{{ servers }}"
   tasks:
-    - name:                 Verify if pid file
+    - name:                 "Verify if pid file"
       shell:                ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/{{ item }}/{{ item }}.pid"`
       register:             server_is_running
       ignore_errors:        true
@@ -20,8 +20,8 @@
 
     #- debug: var=server_is_running
     - name:                 "Stop Servers"
-      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopServer.sh {{ item.item }} -username {{ was_user }} -password {{ was_password }}"
-      register:             start
-      changed_when:         start.rc == 0
+      command:              "{{ __was_install_location }}/profiles/{{ __profile_name }}/bin/stopServer.sh {{ item.item }} -username {{ was_username }} -password {{ was_password }}"
+      register:             cout
+      changed_when:         cout.rc == 0
       when:                 item.rc == 0
       with_items:           "{{ server_is_running.results }}"
