--- a/roles/ibm-http-server-install/tasks/main.yml
+++ b/roles/ibm-http-server-install/tasks/main.yml
@@ -1,17 +1,12 @@
 ---
+- name:          Setup Operating System
+  include_tasks: setup_os.yml
+
 - name:          Check Vars
   include_tasks: check_vars.yml
 
 - name:          Define Vars
   include_tasks: define_vars.yml
-
-- name:          Install pre-requisites
-  yum:           name={{item}} state=present
-  with_items:
-    - unzip
-    - tar
-    - wget
-  when:          (ansible_distribution == "RedHat") or (ansible_distribution == "CentOS")
 
 - name:          Install IBM HTTP Server
   include_tasks: install_ihs.yml
