--- a/roles/was-dmgr-config-jvm/vars/main.yml
+++ b/roles/was-dmgr-config-jvm/vars/main.yml
@@ -1,7 +1,8 @@
 ---
 __profile_name:         "{{ profile_name | default('Dmgr01') }}"
 __was_install_location: "{{ was_install_location  | default('/opt/IBM/WebSphere/AppServer') }}"
-__was_nodename:         "{{ was_nodename }}"
+__default_nodename:      "{{ inventory_hostname_short }}_node"
+__was_nodename:         "{{ was_nodename | default( __default_nodename ) }}"
 __was_username:         "{{ was_username }}"
 __was_password:         "{{ was_password }}"
 __now:                  "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
