--- a/playbooks/ibm-connections6.yml
+++ b/playbooks/ibm-connections6.yml
@@ -2,7 +2,7 @@
 ---
 - name:                    Install WAS Servers
   hosts:                   dmgr,was-servers
-  serial:                  2
+#  serial:                  2
   become:                  true
   roles:
     - roles/installation-manager-install
