--- a/roles/was-dmgr-stop/tasks/main.yml
+++ b/roles/was-dmgr-stop/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name:          "Is dmgr Running?"
-  shell:         "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/dmgr/dmgr.pid'`"
+  shell:         "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/dmgr/dmgr.pid'` > /dev/null"
   register:      dmgr_is_running
   ignore_errors: true
 
