--- a/roles/was-nodeagent-start/tasks/main.yml
+++ b/roles/was-nodeagent-start/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name:          "Is nodeagent Running?"
-  shell:         ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid"`
+  shell:         "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid'` > /dev/null"
   register:      nodeagent_is_running
   ignore_errors: true
 
