--- a/roles/was-server-start/tasks/main.yml
+++ b/roles/was-server-start/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name:          "Verify if pid file"
-  shell:         ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid"`
+  shell:         "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/nodeagent/nodeagent.pid'` > /dev/null"
   register:      nodeagent_is_running
   ignore_errors: true
 
@@ -16,7 +16,7 @@
   when:          nodeagent_is_running.rc != 0
 
 - name:          "Verify if pid file"
-  shell:         ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/{{ item }}/{{ item }}.pid"`
+  shell:         "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/{{ item }}/{{ item }}.pid'` > /dev/null"
   register:      server_is_running
   ignore_errors: true
   with_items:    "{{ __servers }}"
