--- a/roles/was-server-stop/tasks/main.yml
+++ b/roles/was-server-stop/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name:                 "Verify if pid file"
-  shell:                ps -p `cat "{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/{{ item }}/{{ item }}.pid"`
+  shell:                "ps -p `cat '{{ __was_install_location }}/profiles/{{ __profile_name }}/logs/{{ item }}/{{ item }}.pid'` > /dev/null"
   register:             server_is_running
   ignore_errors:        true
   with_items:           "{{ __servers }}"
