--- a/playbooks/ibm-was-nd-complete.yml
+++ b/playbooks/ibm-was-nd-complete.yml
@@ -33,7 +33,7 @@
   #  - { file_name: 8.0.2.10-WS-IBMWASJAVA-Linux.zip, check_sum: 7338d90d760596d95eb9622aa6a5ceb21c5604cece702abeeb8565c331f2aaa1 }
 ---
 - name:                    Install WebSphere Application Server - Network Deployment
-  hosts:                   dmgr,was-servers
+  hosts:                   dmgr,was_servers
   #  serial:                  2
   become:                  true
   roles:
@@ -43,7 +43,7 @@
     - roles/was-java-install
 
 - name:                    Install HTTP Servers
-  hosts:                   ihs-servers
+  hosts:                   ihs_servers
   become:                  true
   roles:
     - roles/installation-manager-install
@@ -65,7 +65,7 @@
     - roles/was-dmgr-restart
 
 - name:                    Setup WAS Nodes
-  hosts:                   was-servers
+  hosts:                   was_servers
   serial:                  1
   become:                  true
   roles:
