--- a/playbooks/ibm-was-nd/java-timezone-2018_2019/java-timezone-2018_2019.yml
+++ b/playbooks/ibm-was-nd/java-timezone-2018_2019/java-timezone-2018_2019.yml
@@ -4,7 +4,7 @@
 #
 ---
 - name:             Atualiza Java Time Zone Table
-  hosts:            dmgr,was-servers
+  hosts:            dmgr,was_servers
   become:           true
   gather_facts:     no
   vars:
