--- a/playbooks/ibm-http-server-complete.yml
+++ b/playbooks/ibm-http-server-complete.yml
@@ -3,7 +3,7 @@
 # Variables used in this playbook that can be setup at hosts file.
 ---
 - name:                     Install IBM HTTP Server - Plugin - WCT
-  hosts:                    ihs-servers
+  hosts:                    ihs_servers
   become:                   true
   roles:
     - roles/installation-manager-install
