--- a/playbooks/ibm-http-server/ibm-http-server.yml
+++ b/playbooks/ibm-http-server/ibm-http-server.yml
@@ -3,7 +3,7 @@
 # Variables used in this playbook that can be setup at hosts file.
 ---
 - name:                     Install IBM HTTP Server - Plugin - WCT
-  hosts:                    ihs-servers
+  hosts:                    ihs_servers
   become:                   true
   vars:
     __repository_url:       "{{ ihs_repository_url }}"
