--- a/playbooks/ibm-was-nd/was-nodeagent-stop.yml
+++ b/playbooks/ibm-was-nd/was-nodeagent-stop.yml
@@ -4,7 +4,7 @@
 #
 ---
 - name:                     Stop Nodeagent
-  hosts:                    was-servers
+  hosts:                    was_servers
   become:                   true
   vars:
     #__profile_name:         "{{ profile_name | default('AppSrv01') }}"
