--- a/playbooks/ibm-was-nd/was-profile-cleanup-logs.yml
+++ b/playbooks/ibm-was-nd/was-profile-cleanup-logs.yml
@@ -4,7 +4,7 @@
 #
 ---
 - name:                      Cleanup and Truncate files on Log directory
-  hosts:                     dmgr, was-servers
+  hosts:                     dmgr, was_servers
   become:                    true
   vars:
     #__profile_name:          "{{ profile_name | default('AppSrv01') }}"
