--- a/roles/was-nd-fix-install/tasks/install_was_fixes.yml
+++ b/roles/was-nd-fix-install/tasks/install_was_fixes.yml
@@ -14,7 +14,7 @@
 
 - name:              Download WAS Fixes
   get_url:
-    url:             "{{ was_repository_url }}/{{ item.file_name }}"
+    url:             "{{ was_fixes_repository_url }}/{{ item.file_name }}"
     dest:            "{{ __tmp_dir }}/{{ item.file_name }}"
     mode:            0755
     checksum:        sha256:{{ item.check_sum }}
